--- a/_site.yml
+++ b/_site.yml
@@ -1,7 +1,7 @@
-name: "my-website"
+name: "ncfpebl-site"
 output_dir: "."
 navbar:
-  title: "My Website"
+  title: "<strong>PEBL</strong>@NCF"
   left:
     - text: "Home"
       href: index.html
